--- a/app.json
+++ b/app.json
@@ -15,4 +15,12 @@
       "required": true
     }
   }
+   "buildpacks": [
+    {
+      "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
+    },
+    {
+      "url": "heroku/python"
+    }
+  ]
 }
