--- a/app.json
+++ b/app.json
@@ -1,23 +1,56 @@
 {
-  "name": "Python telegram bot ",
-  "description": "A Simple Functioning Telegram Bot",
-  "repository": "https://github.com/Surareddy22/basicpythontelegramchatbot",
+  "name": "String Session Generator",
+  "description": "Telegram bot to generate pyrogram string session",
+  "logo": "https://telegra.ph/file/7ec22c82f580a334dd13e.jpg",
   "keywords": [
     "telegram",
     "bot",
-    "python"
-    
-
+    "python",
+    "pyrogram"
   ],
+    "buildpacks": [{
+    "url": "heroku/python"
+  }],
+  "formation": {
+    "worker": {
+      "quantity": 1,
+      "size": "free"
+    }
+  },
+  "addons": [
+      {
+         "options": {
+            "version": "12"
+         },
+         "plan": "heroku-postgresql"
+      }
+   ],
+  "repository": "https://github.com/Skyzu/skystring",
   "env": {
+    "ENVIRONMENT": {
+      "description": "Don't change ANYTHING.",
+      "required": true,
+      "value": "ANYTHING"
+    },
+    "API_ID": {
+      "description": "Get this value from my.telegram.org.",
+      "required": true,
+      "value": ""
+    },
+    "API_HASH": {
+      "description": "Get this value from my.telegram.org.",
+      "required": true,
+      "value": ""
+    },
     "BOT_TOKEN": {
-      "description": "Get it from Bot Father",
-      "required": true
+      "description": "Obtain a Telegram bot token by contacting @BotFather",
+      "required": true,
+      "value": ""
+    },
+    "WEBHOOK": {
+      "description": "Don't change ANYTHING.",
+      "required": true,
+      "value": "ANYTHING"
     }
   }
-   "buildpacks": [
-    {
-      "url": "heroku/python"
-    }
-  ]
 }
