--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "String Session Generator",
-  "description": "Telegram bot to generate pyrogram string session",
-  "logo": "https://telegra.ph/file/7ec22c82f580a334dd13e.jpg",
+  "name": "Santhu Chat Bot",
+  "description": "Telegram chat bot made with python",
+  "logo": "https://te.legra.ph/file/e719f19bbeeb7f55e6202.jpg",
   "keywords": [
     "telegram",
     "bot",
@@ -25,7 +25,7 @@
          "plan": "heroku-postgresql"
       }
    ],
-  "repository": "https://github.com/Skyzu/skystring",
+  "repository": "https://github.com/Surareddy22/basicpythontelegramchatbot",
   "env": {
     "ENVIRONMENT": {
       "description": "Don't change ANYTHING.",
