--- a/app.json
+++ b/app.json
@@ -25,7 +25,7 @@
          "plan": "heroku-postgresql"
       }
    ],
-  "repository": "https://github.com/Surareddy22/basicpythontelegramchatbot",
+  "repository": "https://github.com/santhu113/basicpythontelegramchatbot.git",
   "env": {
     "ENVIRONMENT": {
       "description": "Don't change ANYTHING.",
